# fraud-detection-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  env.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: requirements.txt  streamlit_app.py
data/: README.md
data/models/: best_model.joblib  threshold.json
fraud_pipeline/: __init__.py  api.py  eda.py  evaluate.py  monitor.py  preprocess.py  train.py  tune.py
fraud_pipeline/config/: __init__.py  config.py
fraud_pipeline/configs/: default.yaml
fraud_pipeline/data/: __init__.py  downloader.py  loader.py  processor.py
fraud_pipeline/models/: __init__.py  predictor.py  trainer.py
fraud_pipeline/notebooks/: README.md
fraud_pipeline/utils/: __init__.py  logger.py  metrics.py
scripts/: bootstrap.ps1  bootstrap.sh  download_data.py  eda_report.py  evaluate.py  make_splits.py  monitor.py  score_batch.py  serve.py  train.py  tune.py  verify_kaggle.py
tests/: __init__.py  test_api.py  test_data_loader.py  test_model_fit.py  test_preprocessing.py
